fixed spacing on message content

--- a/react-app/src/components/MatchMessages/MatchMessages.css
+++ b/react-app/src/components/MatchMessages/MatchMessages.css
@@ -7,19 +7,29 @@
 
 .user-messages {
     align-self: flex-end;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.user-message {
     background-color: rgb(233, 233, 233);
     padding: 10px;
     border-radius: 15px;
     margin: 5px;
 }
 
-.other-messages {
-    align-self: flex-start;
+.other-message {
     background-color: #80F;
     color: white;
     padding: 10px;
     border-radius:15px 15px 15px 0;
     margin: 5px;
+}
+
+.other-messages {
+    align-self: flex-start;
+    display: flex;
+    justify-content: flex-start;
 }
 
 #chat-input-form {
@@ -77,4 +87,8 @@
     align-self: center;
     text-align: center;
     padding: 30px;
+}
+
+.message-item-container {
+    width: 60%;
 }
